welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:27: error: ';' expected but 'else' found.
  else if (estSurBiscuit()) prendBiscuit()
  ^